# qgroundcontrol

./: CMakeLists.txt  QGCPostLinkCommon.pri  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qgcresources.qrc  qgroundcontrol.pro
src/: main.cc
src/QtLocationPlugin/: GenericMapProvider.cpp  GenericMapProvider.h  QGCMapUrlEngine.cpp
src/ui/: MainRootWindow.qml
src/ui/toolbar/: FlyViewToolBar.qml  PlanViewToolBar.qml
translations/: qgc_az_AZ.qm  qgc_fa_IR.qm  qgc_json_az_AZ.qm  qgc_json_bg_BG.qm  qgc_json_de_DE.qm  qgc_json_el_GR.qm  qgc_json_es_ES.qm  qgc_json_fi_FI.qm  qgc_json_fr_FR.qm  qgc_json_he_IL.qm  qgc_json_it_IT.qm  qgc_json_ja_JP.qm  qgc_json_ko_KR.qm  qgc_json_nl_NL.qm  qgc_json_no_NO.qm  qgc_json_pl_PL.qm  qgc_json_pt_PT.qm  qgc_json_ru_RU.qm  qgc_json_sv_SE.qm  qgc_json_tr_TR.qm  qgc_json_zh_CN.qm  qgc_ko_KR.qm  qgc_ru_RU.qm  qgc_source_az_AZ.qm  qgc_source_bg_BG.qm  qgc_source_de_DE.qm  qgc_source_el_GR.qm  qgc_source_es_ES.qm  qgc_source_fi_FI.qm  qgc_source_fr_FR.qm  qgc_source_he_IL.qm  qgc_source_it_IT.qm  qgc_source_ja_JP.qm  qgc_source_ko_KR.qm  qgc_source_nl_NL.qm  qgc_source_no_NO.qm  qgc_source_pl_PL.qm  qgc_source_pt_PT.qm  qgc_source_ru_RU.qm  qgc_source_sv_SE.qm  (+4 more)
